# LaserSimulatedSecurityTurret

./: LICENSE  README.md
Source/: camera.py  laser.py  test.py  turret.py
docs/: codingconvention python.txt  socket_spec.txt
src/: camera.py  laser.py  pngtest.h  servo.py  test.py  turret.py
src/TurretControl/: AndroidManifest.xml  build.xml  local.properties
src/TurretControl/res/layout/: joystickview.xml  main.xml
src/TurretControl/res/menu/: main_activity_actions.xml
src/TurretControl/res/values/: strings.xml
src/TurretControl/res/xml/: preferences.xml  prefhead.xml
src/TurretControl/src/org/jensenligan/turretcontrol/: JoyStick.java  Main.java  Preferences.java
src/csockets/: CMakeLists.txt  comm_udp.cpp  comm_udp.h  command.h  main.cpp  talk.cpp
src/eye/: CMakeLists.txt  Eye.vcxproj  Eye.vcxproj.filters  comm_udp.cpp  comm_udp.h  command.cpp  command.h  contour.cpp  contour.h  filesystem.cpp  filesystem.h  main.cpp  motion.cpp  motion.cpp.orig  opticalFlow.cpp  opticalFlow.h  python.cpp  python.h  turn_down.py  turn_left.py  turn_right.py  turn_up.py  turret.cpp  turret.h  turret_connect.py  turret_disconnect.py
src/joy/: CMakeLists.txt  comm_udp.cpp  main.cpp
src/pngtest/: pngtest.c
src/streaming/: client.py  server.py
src/turret/: camera.py  camera_handler.py  demo_turret.py  gui_client.py  gui_simulation.py  keyboard_client.py  laser.py  resetlaser.py  servo.py  sound.py  test.py  testcamera.py  testlaser.py  testservo.py  testsound.py  turn_down.py  turn_left.py  turn_right.py  turn_up.py  turret.py  turret_command.py  turret_connect.py  turret_tcphandler.py  turret_udphandler.py  udp_byte_from_terminal.py
tools/: date_loader.py  date_loader.service
tools/autossh/: autossh.service  autossh.sh
tools/date_loader/: date_loader.py  date_saver.service
tools/servo_test/: servo_test.py
