cmake_minimum_required(VERSION 2.8)
project( csocket )
include_directories(${CMAKE_SOURCE_DIR})
set(CPP_FILES main.cpp comm_udp.cpp command.cpp)
set(GCC_THREAD    "-pthread")
set(GCC_CPP_ELEVEN    "-std=c++11 -g")
add_definitions( ${GCC_THREAD} ${GCC_CPP_ELEVEN} )
add_executable( csocket ${CPP_FILES} )
target_link_libraries( csocket ${GCC_THREAD} )
