cmake_minimum_required(VERSION 2.8)
project( eye )
#find_package( OpenCVI REQUIRED )
#message(${OPENCV2_FOUND})
SET(PYTHON_INCLUDE_PATH    "/usr/include/python3.4m/")
SET(OPENCV_INCLUDE_PATH    "/usr/include/opencv2/")
SET(OPENCV_LIBS_FOLDER    "/usr/lib")
SET(PYTHON_LIBS_FOLDER    "/usr/lib")
include_directories(${CMAKE_SOURCE_DIR})
include_directories(${OPENCV_INCLUDE_PATH})
include_directories(${PYTHON_INCLUDE_PATH})
file(GLOB OPENCV_LIBS "${OPENCV_LIBS_FOLDER}/libopencv*")
file(GLOB PYTHON_LIBS "${PYTHON_LIBS_FOLDER}/libpython3.4m.so")
set(CPP_FILES filesystem.cpp main.cpp turret.cpp motion.cpp opticalFlow.cpp command.cpp comm_udp.cpp contour.cpp )
SET(GCC_CPP_ELEVEN    "-std=c++11 -shared")
set(GCC_THREAD    "-g -pthread")
add_definitions(${GCC_CPP_ELEVEN})
add_executable( eye ${CPP_FILES} )
target_link_libraries( eye ${GCC_THREAD} ${OPENCV_LIBS} ${PYTHON_LIBS})
