cmake_minimum_required(VERSION 2.8)
project( joystick )
SET(SDL2_INCLUDE_PATH    "/usr/include/SDL2/")
include_directories(${CMAKE_SOURCE_DIR})
include_directories(${SDL2_INCLUDE_PATH})
file(GLOB SDL2_LIB "/usr/lib/libSDL2.so")
set(CPP_FILES main.cpp )
set(GCC_CPP_ELEVEN    "-std=c++11 -g")
add_definitions( ${GCC_CPP_ELEVEN} )
add_executable( joystick ${CPP_FILES} )
target_link_libraries( joystick ${SDL2_LIB} )
